--- a/style.css
+++ b/style.css
@@ -124,9 +124,17 @@
     nav .settings {
         background-color: var(--link-background);
         border: 1px solid var(--link-border);
+        width: 30px;
+        height: 30px;
+        padding: 4px;
         /* padding: 2px; */
         /* height: 0; */
         border-radius: 4px;
+    } nav .settings p {
+        margin: 0;
+        padding: 0;
+    } nav .settings:hover {
+        background-color: var(--button-border);
     }
     nav .settings img {
         width: 20px;
