--- a/style.css
+++ b/style.css
@@ -285,6 +285,15 @@
     } article .image-with-text > img + div p {
         margin-left: 30px;
     }
+    #back-to-main-screen {
+        display: none;
+        color: var(--heading-color);
+        font-weight: 700;
+        border: 1px solid var(--button-border);
+        border-radius: 4px;
+        padding: 4px 10px;
+        margin-bottom: 20px;
+    }
 
     article p {
         margin-bottom: 15px;
