--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
         --link-hover:white;
         --box-shadow: 0px 5px 10px rgba(166, 166, 166, 0.315);
 
-        --article-background:white;
+        --article-background:rgb(238, 238, 238);
 
         --button-background: rgb(245, 245, 245);
         --button-border: rgb(161, 161, 161);
