--- a/mobile.css
+++ b/mobile.css
@@ -28,6 +28,7 @@
         position: fixed;
         width: calc(100% - 30px);
         background-color: var(--button-background);
+        z-index: 999;
     }
     button {
         margin-bottom: 8px;
