--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@
         box-sizing: border-box;
         font-family: "Outfit", sans-serif;
     }
+    
 
     body {
         background-color: var(--background-gray);
@@ -116,6 +117,21 @@
         color: var(--a-color);
     }a:hover {
         color: var(--a-hover);
+    }
+
+    a[target="_blank"]:hover {
+        /* background-color: #f0f8ff; */
+    }
+
+    a[target="_blank"]::after {
+        content: "";
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        background-image: url('icons/global-svgrepo-com.svg');
+        background-size: contain;
+        margin-left: 5px;
+        opacity: 0.7;
     }
 
     nav {
