--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
 
     :root {
+        color-scheme: dark light;
         --width: 70%;
         --heading-color: black;
 
