--- a/mobile.css
+++ b/mobile.css
@@ -10,6 +10,9 @@
     aside {
         width: 100%;
     }
+    #article {
+        padding-bottom: 100px;
+    }
     article {
         width: 100%;
         height: auto;
