--- a/style.css
+++ b/style.css
@@ -173,7 +173,9 @@
         /* padding: 2px; */
         /* height: 0; */
         border-radius: 4px;
-    } nav .settings p {
+    }
+
+     nav .settings p {
         margin: 0;
         padding: 0;
     } nav .settings:hover {
@@ -320,6 +322,7 @@
         margin-bottom: 30px;
         border-radius: 5px;
         object-fit:cover;
+        background-color: var(--button-background);
     }
 
     article .image-with-text {
